--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,11 @@ table {
   border-spacing: 0;
 }
 
+.text-wrapper {
+  margin: 0 auto;
+  width: 80%;
+}
+
 .navigation {
   margin: 5.1em;
 }
@@ -58,10 +63,72 @@ table {
 
 .header .hero {
   margin-top: -9em;
+  margin-bottom: -2em;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   gap: 1.7em;
-  width: 100vw;
   scale: 0.525;
+}
+.header .text {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+  text-align: center;
+}
+.header .text__title {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 6.4rem;
+  padding: 0 0.25em;
+  color: #28283d;
+  font-size: 4rem;
+}
+.header .text__description {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: #87879d;
+  font-size: 1.6rem;
+}
+.header .buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.6em;
+}
+.header .buttons .button {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 1.6rem;
+  line-height: 150%;
+  padding: 16px 40px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  color: #fafafa;
+  border-radius: 29px;
+  outline: none;
+  transition: background-color 0.3s;
+}
+.header .buttons .button--btn-1 {
+  background-color: #4d96a9;
+}
+.header .buttons .button--btn-1 span {
+  color: #8fe3f9;
+}
+.header .buttons .button--btn-1:hover, .header .buttons .button--btn-1:focus, .header .buttons .button--btn-1:active {
+  background-color: #71c0d4;
+}
+.header .buttons .button--btn-2 {
+  background-color: #855fb1;
+}
+.header .buttons .button--btn-2:hover, .header .buttons .button--btn-2:focus, .header .buttons .button--btn-2:active {
+  background-color: #b28bdd;
 }/*# sourceMappingURL=main.css.map */
