--- a/css/main.css
+++ b/css/main.css
@@ -131,4 +131,32 @@ table {
 }
 .header .buttons .button--btn-2:hover, .header .buttons .button--btn-2:focus, .header .buttons .button--btn-2:active {
   background-color: #b28bdd;
+}
+
+.guide {
+  position: relative;
+  margin: calc(6.4em + 80px) auto 6.4em;
+  padding: 16px 19px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  border: 1px solid #d1d1df;
+  border-radius: 50%;
+}
+.guide__number {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: #87879d;
+}
+.guide::before {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 1px;
+  height: 80px;
+  background-color: #d1d1df;
 }/*# sourceMappingURL=main.css.map */
