--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,8 @@ table {
   max-width: fit-content;
   color: #fafafa;
   border-radius: 29px;
-  outline: none;
   transition: background-color 0.3s;
+  outline: none;
 }
 .header .buttons .button--btn-1 {
   background-color: #4d96a9;
@@ -131,9 +131,17 @@ table {
   background-color: #b28bdd;
 }
 
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6.4em;
+}
+
 .guide {
   position: relative;
-  margin: calc(6.4em + 80px) auto 6.4em;
+  margin: calc(6.4em + 80px) auto 0;
   padding: 16px 19px;
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -157,4 +165,58 @@ table {
   width: 1px;
   height: 80px;
   background-color: #d1d1df;
+}
+
+.image-collage {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1.6em;
+}
+.image-collage .image {
+  border-radius: 8px;
+  overflow: hidden;
+}
+.image-collage .image img {
+  width: 100%;
+  height: 100%;
+}
+
+.section .text {
+  text-align: center;
+}
+.section .text__title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2.125em;
+}
+.section .text__title--small {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 1.2rem;
+  letter-spacing: 4px;
+  margin-bottom: 1.35em;
+  text-transform: uppercase;
+  color: #4d96a9;
+}
+.section .text__title--big {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 3.2rem;
+  color: #28283d;
+}
+.section .text__content {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 1.6rem;
+  color: #87879d;
 }/*# sourceMappingURL=main.css.map */
