--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,11 @@ table {
   font-size: 0;
 }
 
-.header .hero {
+.header {
   margin-top: -9em;
+  overflow-x: hidden;
+}
+.header .hero {
   margin-bottom: -2em;
   display: flex;
   justify-content: center;
@@ -145,8 +148,10 @@ table {
   padding: 16px 19px;
   max-width: -moz-fit-content;
   max-width: fit-content;
+  background-color: #fafafa;
   border: 1px solid #d1d1df;
   border-radius: 50%;
+  z-index: 3;
 }
 .guide__number {
   font-family: "Red Hat Display", sans-serif;
@@ -219,4 +224,69 @@ table {
   font-weight: 500;
   font-size: 1.6rem;
   color: #87879d;
+}
+
+.footer {
+  margin-top: -30px;
+}
+.footer .footer-hero {
+  position: relative;
+  padding: 6.4rem 0;
+  background-image: url("../assets/mobile/image-footer.jpg");
+  background-size: cover;
+  z-index: 0;
+}
+.footer .footer-hero__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d96a9;
+  opacity: 0.9;
+  z-index: -1;
+}
+.footer .footer-hero .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4em;
+  text-align: center;
+  color: #fafafa;
+}
+.footer .footer-hero .text__title {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 3.2rem;
+}
+.footer .footer-hero .text__description {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 1.6rem;
+}
+.footer .footer-hero .text__cta-button {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 1.6rem;
+  line-height: 150%;
+  padding: 16px 40px;
+  color: #fafafa;
+  background-color: #855fb1;
+  border-radius: 29px;
+  transition: background-color 0.3s;
+  outline: none;
+}
+.footer .footer-hero .text__cta-button:hover, .footer .footer-hero .text__cta-button:focus, .footer .footer-hero .text__cta-button:active {
+  background-color: #b28bdd;
+}
+.footer .footer-hero .text__cta-button span {
+  color: #d9b8ff;
 }/*# sourceMappingURL=main.css.map */
