--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,8 +28,9 @@
 
 // header
 .header {
+	margin-top: -9em;
+	overflow-x: hidden;
 	.hero {
-		margin-top: -9em;
 		margin-bottom: -2em;
 		display: flex;
 		justify-content: center;
@@ -105,8 +106,10 @@
 	margin: calc(6.4em + 80px) auto 0;
 	padding: 16px 19px;
 	max-width: fit-content;
+	background-color: $white;
 	border: 1px solid $slateLighter;
 	border-radius: 50%;
+	z-index: 3;
 	&__number {
 		@include text-preset-five;
 		color: $slateDarker;
@@ -168,4 +171,58 @@
 	}
 }
 
+.footer {
+	margin-top: -30px;
+	.footer-hero {
+		position: relative;
+		padding: 6.4rem 0;
+		background-image: url('../assets/mobile/image-footer.jpg');
+		background-size: cover;
+		z-index: 0;
+		&__shadow {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: $cyanDarker;
+			opacity: 0.9;
+			z-index: -1;
+		}
 
+		.text {
+			@include flex-column();
+			gap: 2.4em;
+			text-align: center;
+			color: $white;
+
+			&__title {
+				@include text-preset-two();
+			}
+
+			&__description {
+				@include text-preset-four();
+			}
+
+			&__cta-button {
+				@include text-preset-five();
+				padding: 16px 40px;
+				color: $white;
+				background-color: $purpleDarker;
+				border-radius: 29px;
+				transition: background-color 0.3s;
+				outline: none;
+
+				&:hover,
+				&:focus,
+				&:active {
+					background-color: #b28bdd;
+				}
+
+				span {
+					color: $purpleLighter;
+				}
+			}
+		}
+	}
+}
