--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,8 @@ table {
   line-height: 110%;
   letter-spacing: 0px;
   font-size: 4rem;
-  padding: 0 0.25em;
+  margin: 0 auto;
+  max-width: 280px;
   color: #28283d;
 }
 .header .text__description {
@@ -214,6 +215,7 @@ table {
   line-height: 110%;
   letter-spacing: 0px;
   font-size: 3.2rem;
+  max-width: 450px;
   color: #28283d;
 }
 .section .text__content {
@@ -289,4 +291,147 @@ table {
 }
 .footer .footer-hero .text__cta-button span {
   color: #d9b8ff;
+}
+
+@media (width > 576px) {
+  .header {
+    margin-top: 6.4em;
+  }
+  .header .hero {
+    margin-bottom: 7.2em;
+    gap: 3.2em;
+    scale: 1;
+  }
+  .header .text__title {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 4.8rem;
+    max-width: 350px;
+  }
+  .header .text__description {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 400px;
+  }
+  .header .buttons {
+    display: flex;
+    flex-direction: row;
+  }
+  .section .guide {
+    margin: calc(12em + 80px) auto 0;
+  }
+  .section .text {
+    margin: 0 auto;
+  }
+  .section .text__title--small {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 1.4rem;
+    letter-spacing: 4px;
+  }
+  .section .text__title--big {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 3.6rem;
+    max-width: 450px;
+  }
+  .section .text__content {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-weight: 500;
+    font-size: 1.6rem;
+    margin: 0 auto;
+    max-width: 500px;
+  }
+  .footer .footer-hero {
+    background-image: url("../assets/tablet/image-footer.jpg");
+  }
+  .footer .footer-hero .text__title {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 3.6rem;
+  }
+  .footer .footer-hero .text__description {
+    margin: 0 auto;
+    max-width: 500px;
+  }
+}
+@media (width > 768px) {
+  .image-collage {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: none;
+    gap: 2.4em;
+  }
+}
+@media (width > 1200px) {
+  .image-collage {
+    max-width: 1200px;
+  }
+  .section .text__title--small {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 1.6rem;
+    letter-spacing: 4px;
+  }
+  .section .text__title--big {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-size: 4rem;
+  }
+  .section .text__content {
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
+    line-height: 110%;
+    letter-spacing: 0px;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 150%;
+    max-width: 550px;
+  }
+}
+.footer .footer-hero {
+  padding: 11.2rem 0;
+  background-image: url("../assets/desktop/image-footer.jpg");
+}
+.footer .footer-hero .text {
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  text-align: start;
+}
+.footer .footer-hero .text__title {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-size: 4rem;
+  max-width: 350px;
+}
+.footer .footer-hero .text__description {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 900;
+  line-height: 110%;
+  letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 150%;
+  max-width: 350px;
+}
+.footer .footer-hero .text__cta-button {
+  min-width: -moz-max-content;
+  min-width: max-content;
 }/*# sourceMappingURL=main.css.map */
